2002-03-03  Braden McDaniel  <braden@endoframe.com>

        * MathUtils.h: Changed Vset, Vscale, Vdot macros to inline
          functions.

        * MathUtils.h: Made Vlength const-correct.

2002-03-02  Braden McDaniel  <braden@endoframe.com>

        * More doxygen love.

        * Changed some constants to lower-case in "private.h".

2002-02-25  S. K. Bose  <bose@pavan.barc.ernet.in>
 
        * Put back "const float (&get() const)[4][4]" in
          VrmlMatrix as VC++6.0 gives error by using operator[].

        * Put static_cast in assisgnWithSelfRefCheck method in 
          script.cpp

        * Fix to handle null CLASSPATH env. variable in ScriptJDK.cpp

2002-02-21  Braden McDaniel  <braden@endoframe.com>

        * VrmlMatrix: contructor that takes float args doesn't need to
          be explicit.

        * VrmlMatrix: removed methods:

              void set(const float[4][4]);
              void get(float[4][4]);
              const float (&get() const)[4][4];

          Use operator[] and std::copy instead.

        * VrmlMatrix: doc-comment improvements.

        * VrmlMatrix: Don't check if matrix is identity before
          performing multiplication in multRight and multLeft.

        * VrmlMatrix: Use std::equal to implement operator==.

        * VrmlMatrix: more doc-comment improvements.

        * Move VrmlEvent to an unnamed namespace in ScriptJDK.cpp.

        * AUTHORS: Added Frederic Devernay as a contributor.

        * AUTHORS: Updated Gerall Kahla's e-mail address.

        * THANKS: openvrml.org is now hosted by SourceForge; reflect
          name change VA Linux -> VA Software.

2002-02-19  Braden McDaniel  <braden@endoframe.com>

        * VrmlMatrix: use std::copy instead of memcpy.

        * VrmlMatrix: improved doc-comments.

        * VrmlMatrix: made construction from 4x4 array explicit.

        * VrmlMatrix: removed automatic conversion to float *.  Use
          operator[] for this instead.
